--- a/package.json
+++ b/package.json
@@ -28,13 +28,16 @@
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dayjs": "^1.11.18",
+    "eventemitter2": "^6.4.9",
     "express": "^5.1.0",
     "express-basic-auth": "^1.2.1",
+    "glob": "^11.0.3",
     "mongoose": "^8.18.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
