revert package-lock,json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "name": "nest-app",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
   "private": true,
+  "description": "<p align=\"center\">\r   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo-small.svg\" width=\"120\" alt=\"Nest Logo\" /></a>\r </p>",
+  "homepage": "https://github.com/crdsyntax/templateback#readme",
+  "bugs": {
+    "url": "https://github.com/crdsyntax/templateback/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/crdsyntax/templateback.git"
+  },
   "license": "UNLICENSED",
+  "author": "crdsyntax",
+  "type": "commonjs",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
