--- a/.github/workflows/dev-PR-push-workflow.yml
+++ b/.github/workflows/dev-PR-push-workflow.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Run Format
+        run: npm run format
+
       - name: Run ESLint
         run: npm run lint
 
